--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,12 @@ services:
     networks:
       internal:
         ipv4_address: 172.16.10.100
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "http://seleniumffhost.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:4444/grid/api/proxy"] 
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
 
   seleniumgchost:
     container_name: seleniumgchost.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
@@ -45,3 +51,8 @@ services:
     networks:
       internal:
         ipv4_address: 172.16.10.101
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "http://seleniumgchost.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:4444/grid/api/proxy"] 
+      interval: 10s
+      timeout: 5s
+      retries: 3
