--- a/cicdtoolbox-db/compose.yaml
+++ b/cicdtoolbox-db/compose.yaml
@@ -9,7 +9,7 @@ secrets:
     file: ../vault/certs/cicdtoolbox-db.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.crt
 
 services:
-  cicdtoolbox-db.internal:
+  cicdtoolbox-db:
     container_name: cicdtoolbox-db.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
     build: .
     command: |
