--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ networks:
         - subnet: 172.16.8.0/21
 
 include:
-  # - cicdtoolbox-db/compose.yaml
+  - cicdtoolbox-db/compose.yaml
   # - gitea/compose.yaml
   # - jenkins/compose.yaml
   # - jenkins_buildnode/compose.yaml
   # - keycloak/compose.yaml
-  # - lldap/compose.yaml
+  - lldap/compose.yaml
   # - pulp/compose.yaml
   - vault/compose.yaml
 
