--- a/keycloak/compose.yaml
+++ b/keycloak/compose.yaml
@@ -30,6 +30,8 @@ services:
       KC_HTTPS_CERTIFICATE_KEY_FILE: '/etc/x509/https/tls.key'
       QUARKUS_TRANSACTION_MANAGER_ENABLE_RECOVERY: 'true' 
       JDBC_PARAMS: ssl=true&sslmode=verify-ca&sslrootcert=/etc/pki/ca-trust/source/anchors/ca.crt
+      DOMAIN_NAME_SL: '${DOMAIN_NAME_SL}'
+      DOMAIN_NAME_TL: '${DOMAIN_NAME_TL}'
     secrets:
       - source: keycloak_key
         target: /etc/x509/https/tls.key
