--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ networks:
 
 include:
   - cicdtoolbox-db/compose.yaml
-  # - gitea/compose.yaml
+  - gitea/compose.yaml
   - jenkins/compose.yaml
-  # - jenkins_buildnode/compose.yaml
+  - jenkins_buildnode/compose.yaml
   - keycloak/compose.yaml
   - lldap/compose.yaml
   - pulp/compose.yaml
