--- a/gitea/app.ini
+++ b/gitea/app.ini
@@ -10,8 +10,8 @@ DISABLE_SSH      = true
 START_SSH_SERVER = true
 OFFLINE_MODE     = false
 APP_DATA_PATH    = /data/gitea
-CERT_FILE        = gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.crt
-KEY_FILE         = gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.pem
+CERT_FILE        = %(DOMAIN).crt
+KEY_FILE         = %(DOMAIN).pem
 
 
 [database]
