--- a/gitea/app.ini
+++ b/gitea/app.ini
@@ -6,13 +6,10 @@ RUN_MODE = prod
 PROTOCOL         = https
 HTTP_PORT        = 3000
 ROOT_URL         = %(PROTOCOL)s://%(DOMAIN)s:%(HTTP_PORT)s/
-DISABLE_SSH      = true
+DISABLE_SSH      = false
 START_SSH_SERVER = true
 OFFLINE_MODE     = false
 APP_DATA_PATH    = /data/gitea
-CERT_FILE        = %(DOMAIN).crt
-KEY_FILE         = %(DOMAIN).pem
-
 
 [database]
 DB_TYPE     = postgres
