--- a/gitea/compose.yaml
+++ b/gitea/compose.yaml
@@ -27,10 +27,13 @@ services:
     environment:
       - USER_UID=1000
       - USER_GID=1000
-      - 'GITEA__server__DOMAIN=gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}'
-      - 'GITEA__database__HOST=cicdtoolbox-db.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}'
-      - 'GITEA__database__USER=${gitea_db_user}'
-      - 'GITEA__database__PASSWD=${gitea_db_password}'
+      - GITEA__server__DOMAIN=gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
+      - GITEA__database__HOST=cicdtoolbox-db.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
+      - GITEA__database__USER=${gitea_db_user}
+      - GITEA__database__PASSWD=${gitea_db_password}
+      - GITEA__server__CERT_FILE=/certs/gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.crt
+      - GITEA__server__KEY_FILE=/certs/gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.pem
+      - GITEA__server__SSH_DOMAIN=gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
     secrets:
       - source: ca_crt
         target: /usr/local/share/ca-certificates/CICD-toolbox-ca.crt
