--- a/gitea/app.ini
+++ b/gitea/app.ini
@@ -6,7 +6,7 @@ RUN_MODE = prod
 PROTOCOL         = https
 HTTP_PORT        = 3000
 ROOT_URL         = %(PROTOCOL)s://%(DOMAIN)s:%(HTTP_PORT)s/
-DISABLE_SSH      = false
+DISABLE_SSH      = true
 START_SSH_SERVER = true
 OFFLINE_MODE     = false
 APP_DATA_PATH    = /data/gitea
