--- a/gitea/app.ini
+++ b/gitea/app.ini
@@ -7,7 +7,7 @@ PROTOCOL         = https
 HTTP_PORT        = 3000
 ROOT_URL         = %(PROTOCOL)s://%(DOMAIN)s:%(HTTP_PORT)s/
 DISABLE_SSH      = true
-START_SSH_SERVER = true
+START_SSH_SERVER = false
 OFFLINE_MODE     = false
 APP_DATA_PATH    = /data/gitea
 
