--- a/lldap/data/lldap_config.toml
+++ b/lldap/data/lldap_config.toml
@@ -43,7 +43,7 @@ ldap_base_dn = "dc=provider,dc=test"
 ## For the LDAP interface, a value of "admin" here will create the LDAP
 ## user "cn=admin,ou=people,dc=example,dc=com" (with the base DN above).
 ## For the administration interface, this is the username.
-#ldap_user_dn = "admin"
+ldap_user_dn = "admin"
 
 ## Admin email.
 ## Email for the admin account. It is only used when initially creating
