going to stock lldap on postgres

--- a/.env
+++ b/.env
@@ -14,8 +14,6 @@ netcicd_pwd=netcicd01
 postgres_user=netcicd
 postgres_password=netcicd
 
-gitea_db_user=gitea
-gitea_db_password=gitea
 
 jenkins_admin=local-admin
 jenkins_admin_password=netcicd
@@ -23,8 +21,6 @@ jenkins_argos_password=netcicd
 jenkins_nexus_password=netcicd
 jenkins_storepass=changeit
 
-keycloak_db_user=keycloak
-keycloak_db_password=keycloak
 keycloak_admin=local-admin
 keycloak_admin_password=Pa55w0rd
 keycloak_pwd=Pa55w0rd
@@ -33,5 +29,14 @@ keycloak_storepass=password
 git_password=git
 
 ldap_admin_password=Pa55w0rd
+
 ldap_db_user=ldap
-ldap_db_password=ldap
+ldap_db_pwd=ldap
+gitea_db_user=gitea
+gitea_db_pwd=gitea
+keycloak_db_user=keycloak
+keycloak_db_pwd=keycloak
+terraform_db_user=terraform
+terraform_db_pwd=terraform
+pulp_db_user=ldap
+pulp_db_pwd=ldap
