--- a/lldap/compose.yaml
+++ b/lldap/compose.yaml
@@ -28,15 +28,27 @@ services:
       - UID=1000
       - GID=1000
       - TZ=Europe/Amsterdam
-      - LLDAP_LDAP_BASE_DN=dc=provider,dc=test
       - LLDAP_HTTP_URL = "http://ldap.iam.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}"
-      - LLDAP_LDAP_USER_PASS='${ldap_admin_password}'
-      # - LLDAP_KEY_FILE = "/data/key.pem"
-      # - LLDAP_LDAPS_OPTIONS__ENABLED = TRUE
-      # - LLDAP_LDAPS_OPTIONS__PORT = 6360
+      - LLDAP_JWT_SECRET = '${LLDAP_JWT_SECRET}'
+      - LLDAP_LDAP_BASE_DN=dc=${DOMAIN_NAME_SL},dc=DOMAIN_NAME_TL
+      - LLDAP_LDAP_USER_DN = '${local_admin_user}'
+      - LLDAP_LDAP_USER_EMAIL='${local_admin_user}@${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}'
+      - LLDAP_LDAP_USER_PASS = '${local_admin_password}'
+      - LLDAP_FORCE_LDAP_USER_PASS_RESET = FALSE
+      - LLDAP_DATABASE_URL="postgres://${ldap_db_user}:${ldap_db_password}@cicdtoolbox-db.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}/ldap"
+      - LLDAP_KEY_SEED = '${LLDAP_KEY_SEED}'
+      - LLDAP_SMTP_OPTIONS__ENABLE_PASSWORD_RESET = FALSE
+      - LLDAP_SMTP_OPTIONS__SERVER = "smtp.gmail.com"
+      - LLDAP_SMTP_OPTIONS__PORT = 587
+      - LLDAP_SMTP_OPTIONS__SMTP_ENCRYPTION = "TLS"
+      - LLDAP_SMTP_OPTIONS__SMTP_USER = '${local_admin_user}@${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}'
+      - LLDAP_SMTP_OPTIONS__SMTP_PASSWORD = '${local_admin_password}'
+      - LLDAP_SMTP_OPTIONS__SMTP_FROM = 'LLDAP admin ${local_admin_user}@${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}'
+      - LLDAP_SMTP_OPTIONS__SMTP_REPLY_TO = 'LLDAP admin ${local_admin_user}@${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}'
+      - LLDAP_LDAPS_OPTIONS__ENABLED = TRUE
+      - LLDAP_LDAPS_OPTIONS__PORT = 6360
       - LLDAP_LDAPS_OPTIONS__CERT_FILE = "/data/cert.crt"
       - LLDAP_LDAPS_OPTIONS__KEY_FILE = "/data/key.pem"
-      # - LLDAP_DATABASE_URL=postgres://'${ldap_db_user}':'${ldap_db_password}'@cicdtoolbox-db.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}/ldap
     networks:
       internal:
         ipv4_address: 172.16.8.11
