--- a/gitea/compose.yaml
+++ b/gitea/compose.yaml
@@ -30,7 +30,7 @@ services:
       - 'GITEA__server__DOMAIN=gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}'
       - 'GITEA__database__HOST=cicdtoolbox-db.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}'
       - 'GITEA__database__USER=${gitea_db_user}'
-      - 'GITEA__database__PASSWD=${gitea_db_password}'
+      - 'GITEA__database__PASSWD=${gitea_db_pwd}'
       - 'GITEA__server__CERT_FILE=gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.crt'
       - 'GITEA__server__KEY_FILE=gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.pem'
       - 'GITEA__server__SSH_DOMAIN=gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}'
