--- a/.env
+++ b/.env
@@ -1,15 +1,14 @@
 COMPOSE_PROJECT_NAME=cicd-toolbox
 #Install mode can be local or vm
-install_mode=vm
+install_mode=local
 DOMAIN_NAME_TL=test
 DOMAIN_NAME_SL=provider
+ORG_NAME=infraautomator
 default_user=netcicd
-default_user_password=netcicd
+default_user_password=netcicd01
 
 local_admin_user=local-admin
 local_admin_password=Pa55w0rd
-
-netcicd_pwd=netcicd01
 
 postgres_user=netcicd
 postgres_password=netcicd
@@ -18,8 +17,10 @@ postgres_password=netcicd
 jenkins_admin=local-admin
 jenkins_admin_password=netcicd
 jenkins_argos_password=netcicd
-jenkins_nexus_password=netcicd
+jenkins_pulp_password=netcicd
+jenkins_git_password=netcicd
 jenkins_storepass=changeit
+jenkins_dev_logon_password=netcicd
 
 keycloak_admin=local-admin
 keycloak_admin_password=Pa55w0rd
@@ -27,7 +28,7 @@ keycloak_pwd=Pa55w0rd
 keycloak_storepass=password
 
 git_password=git
-
+ldap_admin_user=admin
 ldap_admin_password=Pa55w0rd
 
 ldap_db_user=ldap
@@ -38,5 +39,5 @@ keycloak_db_user=keycloak_user
 keycloak_db_pwd=keycloak_paswd
 terraform_db_user=terraform
 terraform_db_pwd=terraform
-pulp_db_user=ldap
-pulp_db_pwd=ldap
+pulp_db_user=pulp
+pulp_db_pwd=pulp
