--- a/gitea/compose.yaml
+++ b/gitea/compose.yaml
@@ -27,13 +27,57 @@ services:
     environment:
       - USER_UID=1000
       - USER_GID=1000
-      - 'GITEA__server__DOMAIN=gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}'
-      - 'GITEA__database__HOST=cicdtoolbox-db.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}'
-      - 'GITEA__database__USER=${gitea_db_user}'
-      - 'GITEA__database__PASSWD=${gitea_db_pwd}'
-      - 'GITEA__server__CERT_FILE=gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.crt'
-      - 'GITEA__server__KEY_FILE=gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.pem'
-      - 'GITEA__server__SSH_DOMAIN=gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}'
+      - GITEA__APP_NAME=Our single source of truth
+      - GITEA__RUN_USER=git
+      - GITEA__RUN_MODE=prod
+      - GITEA__server__PROTOCOL=https
+      - GITEA__server__HTTP_PORT=3000
+      - GITEA__server__ROOT_URL=https://gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:3000/
+      - GITEA__server__DISABLE_SSH=true
+      - GITEA__server__START_SSH_SERVER=false
+      - GITEA__server__OFFLINE_MODE=false
+      - GITEA__server__APP_DATA_PATH=/data/gitea
+      - GITEA__server__DOMAIN=gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
+      - GITEA__server__CERT_FILE=gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.crt
+      - GITEA__server__KEY_FILE=gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.pem
+      - GITEA__server__SSH_DOMAIN=gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
+      - GITEA__database__DB_TYPE=postgres
+      - GITEA__database__HOST=cicdtoolbox-db.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
+      - GITEA__database__NAME=gitea
+      - GITEA__database__SSL_MODE=verify-full
+      - GITEA__database__USER=${gitea_db_user}
+      - GITEA__database__PASSWD=${gitea_db_pwd}
+      - GITEA__security__INSTALL_LOCK=true
+      - GITEA__security__LOGIN_REMEMBER_DAYS=1
+      - GITEA__oauth2__Enabled=false
+      - GITEA__log__MODE=console
+      - GITEA__log__LEVEL=trace
+      - GITEA__log__ROOT_PATH=/data/gitea/log
+      - GITEA__log__COLORIZE=true
+      - GITEA__service__DISABLE_REGISTRATION=false
+      - GITEA__service__ALLOW_ONLY_EXTERNAL_REGISTRATION=true
+      - GITEA__service__REQUIRE_SIGNIN_VIEW=true
+      - GITEA__service__DEFAULT_ALLOW_CREATE_ORGANIZATION=false
+      - GITEA__service__DEFAULT_USER_IS_RESTRICTED=true
+      - GITEA__service__DEFAULT_USER_VISIBILITY=private
+      - GITEA__service__DEFAULT_ORG_VISIBILITY=private
+      - GITEA__service__DEFAULT_ORG_MEMBER_VISIBLE=true
+      - GITEA__repository__DEFAULT_PRIVATE=private
+      - GITEA__repository__DEFAULT_PUSH_CREATE_PRIVATE=true
+      - GITEA__admin__DISABLE_REGULAR_ORG_CREATION=true
+      - GITEA__openid__ENABLE_OPENID_SIGNIN=false
+      - GITEA__openid__ENABLE_OPENID_SIGNUP=true
+      - GITEA__openid__WHITELISTED_URIS=${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
+      - GITEA__oauth2_client__REGISTER_EMAIL_CONFIRM=false
+      - GITEA__oauth2_client__ENABLE_AUTO_REGISTRATION=true
+      - GITEA__webhook__ALLOWED_HOST_LIST=${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
+      - GITEA__webhook__SKIP_TLS_VERIFY=false
+      - GITEA__session__PROVIDER=db
+      - GITEA__picture__AVATAR_UPLOAD_PATH=/data/gitea/avatars
+      - GITEA__picture__REPOSITORY_AVATAR_UPLOAD_PATH=/data/gitea/repo-avatars
+      - GITEA__picture__DISABLE_GRAVATAR=true
+      - GITEA__attachment__PATH=/data/gitea/attachments
+      - GITEA__actions__ENABLED=true
     secrets:
       - source: ca_crt
         target: /usr/local/share/ca-certificates/CICD-toolbox-ca.crt
