--- a/lldap/compose.yaml
+++ b/lldap/compose.yaml
@@ -14,46 +14,53 @@ services:
     restart: unless-stopped
     hostname: ldap
     expose:
-      - '3890'
+      - "3890"
     ports:
-      - '17170:17170'
+      - "17170:17170"
     secrets:
       - source: ldap_key
         target: /data/key.pem
       - source: ldap_crt
         target: /data/cert.crt
     volumes:
-      - './data:/data'
+      - ./data:/data
+      - ./bootstrap:/bootstrap
     environment:
       - UID=1000
       - GID=1000
       - TZ=Europe/Amsterdam
-      - LLDAP_HTTP_URL = "http://ldap.iam.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}"
-      - LLDAP_JWT_SECRET = '${LLDAP_JWT_SECRET}'
-      - LLDAP_LDAP_BASE_DN=dc=${DOMAIN_NAME_SL},dc=DOMAIN_NAME_TL
-      - LLDAP_LDAP_USER_DN = '${local_admin_user}'
-      - LLDAP_LDAP_USER_EMAIL='${local_admin_user}@${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}'
-      - LLDAP_LDAP_USER_PASS = '${local_admin_password}'
+      - LLDAP_URL=http://ldap.iam.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:17170
+      - LLDAP_ADMIN_USERNAME=${ldap_admin_user}
+      - LLDAP_ADMIN_PASSWORD=${ldap_admin_password}
+      - LLDAP_LDAP_ADMIN_PASS=${ldap_admin_password}
+      - LLDAP_HTTP_URL=http://ldap.iam.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
+      - LLDAP_JWT_SECRET =${LLDAP_JWT_SECRET}
+      - LLDAP_LDAP_BASE_DN=dc=${DOMAIN_NAME_SL},dc=${DOMAIN_NAME_TL}
+      - LLDAP_LDAP_USER_DN = ${ldap_admin_user}
+      - LLDAP_LDAP_USER_EMAIL=${ldap_admin_user}@${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
+      - LLDAP_LDAP_USER_PASS =${ldap_admin_password}
       - LLDAP_FORCE_LDAP_USER_PASS_RESET = FALSE
-      - LLDAP_DATABASE_URL="postgres://${ldap_db_user}:${ldap_db_pwd}@cicdtoolbox-db.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}/ldap"
-      - LLDAP_KEY_SEED = '${LLDAP_KEY_SEED}'
-      - LLDAP_SMTP_OPTIONS__ENABLE_PASSWORD_RESET = FALSE
-      - LLDAP_SMTP_OPTIONS__SERVER = "smtp.gmail.com"
+      - LLDAP_DATABASE_URL=postgres://${ldap_db_user}:${ldap_db_pwd}@cicdtoolbox-db.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}/ldap
+      - LLDAP_KEY_SEED = ${LLDAP_KEY_SEED}
+      - LLDAP_SMTP_OPTIONS__ENABLE_PASSWORD_RESET = false
+      - LLDAP_SMTP_OPTIONS__SERVER = smtp.gmail.com
       - LLDAP_SMTP_OPTIONS__PORT = 587
-      - LLDAP_SMTP_OPTIONS__SMTP_ENCRYPTION = "TLS"
-      - LLDAP_SMTP_OPTIONS__SMTP_USER = '${local_admin_user}@${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}'
-      - LLDAP_SMTP_OPTIONS__SMTP_PASSWORD = '${local_admin_password}'
-      - LLDAP_SMTP_OPTIONS__SMTP_FROM = 'LLDAP admin ${local_admin_user}@${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}'
-      - LLDAP_SMTP_OPTIONS__SMTP_REPLY_TO = 'LLDAP admin ${local_admin_user}@${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}'
-      - LLDAP_LDAPS_OPTIONS__ENABLED = TRUE
+      - LLDAP_SMTP_OPTIONS__SMTP_ENCRYPTION = TLS
+      - LLDAP_LDAPS_OPTIONS__ENABLED = true
       - LLDAP_LDAPS_OPTIONS__PORT = 6360
-      - LLDAP_LDAPS_OPTIONS__CERT_FILE = "/data/cert.crt"
-      - LLDAP_LDAPS_OPTIONS__KEY_FILE = "/data/key.pem"
+      - LLDAP_LDAPS_OPTIONS__CERT_FILE = /data/cert.crt
+      - LLDAP_LDAPS_OPTIONS__KEY_FILE = /data/key.pem
+      - USER_CONFIGS_DIR=/bootstrap/user-configs
+      - GROUP_CONFIGS_DIR=/bootstrap/group-configs
+      - USER_SCHEMAS_DIR=/bootstrap/user-schemas
+      - GROUP_SCHEMAS_DIR=/bootstrap/group-schemas
+      - DO_CLEANUP=false
+      - RUST_BACKTRACE=full
     networks:
       internal:
         ipv4_address: 172.16.8.11
     healthcheck:
-      test: 'curl --insecure -fSs http://ldap.iam.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:17170/login'
+      test: "curl --insecure -fSs http://ldap.iam.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:17170/login"
       start_period: 60s
       interval: 5s
       timeout: 5s
