make sure env is complete

--- a/.env
+++ b/.env
@@ -1,34 +1,37 @@
 COMPOSE_PROJECT_NAME=cicd-toolbox
 #Install mode can be local or vm
-install_mode=local
+install_mode=vm
+
+# Set the domain name for the environment
 DOMAIN_NAME_TL=test
 DOMAIN_NAME_SL=provider
+
+# Set the name of the organisation owning the main repositories in the environment (org name in Jenkins)
 ORG_NAME=infraautomator
+
+# Default username and password for the environment
 default_user=netcicd
 default_user_password=netcicd01
 
+# name of a locally configured username for administrative escape hatches
 local_admin_user=local-admin
 local_admin_password=Pa55w0rd
 
+#Main PostgreSQL password
 postgres_user=netcicd
 postgres_password=netcicd
 
-jenkins_admin=local-admin
-jenkins_admin_password=netcicd
-
+#Passwords that should be in Vault
 jenkins_pulp_password=netcicd
 jenkins_git_password=netcicd
 jenkins_storepass=changeit
 jenkins_dev_logon_password=netcicd
 
-keycloak_admin=local-admin
-keycloak_admin_password=Pa55w0rd
-keycloak_pwd=Pa55w0rd
 keycloak_storepass=password
 
 git_password=git
+
 ldap_admin_user=admin
-ldap_admin_password=Pa55w0rd
 
 ldap_db_user=ldap
 ldap_db_pwd=ldap
