--- a/jenkins/compose.yaml
+++ b/jenkins/compose.yaml
@@ -26,12 +26,12 @@ services:
       - JENKINS_PULP_PASSWORD=${jenkins_pulp_password}
       - JENKINS_GIT_PASSWORD=${jenkins_git_password}
       - JENKINS_DEV_LOGON_PASSWORD=${jenkins_dev_logon_password}
-      - JENKINS_ADMIN_ID=${jenkins_admin}
-      - JENKINS_ADMIN_PASSWORD=${jenkins_admin_password}
+      - JENKINS_ADMIN_ID=${local_admin}
+      - JENKINS_ADMIN_PASSWORD=${local_admin_password}
       - DOMAIN_NAME_SL=${DOMAIN_NAME_SL}
       - DOMAIN_NAME_TL=${DOMAIN_NAME_TL}
       - NETCICD_PASSWORD=${default_user_password}
-      - GIT_PASSWORD=${git_password}
+      - GIT_PASSWORD=${local_admin_password}
       - GITEA_IP=172.16.11.3
       - JENKINS_IP=172.16.11.8
       - PULP_IP=172.16.11.9
