--- a/install/cloud_init_kvm.cfg
+++ b/install/cloud_init_kvm.cfg
@@ -39,8 +39,8 @@ write_files:
     content: |-
       #!/bin/sh
       # cd /home/user
-      # if $(curl --output /dev/null --silent --head --fail http://jenkins.tooling.test:8084/whoAmI); then
-      #   wget http://jenkins.tooling.test:8084/jnlpJars/agent.jar
+      # if $(curl --output /dev/null --silent --head --fail http://jenkins.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:8084/whoAmI); then
+      #   wget http://jenkins.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:8084/jnlpJars/agent.jar
       #   echo "Jenkins reachable. Retrieved agent.jar from Jenkins."  >>/home/user/install-log.txt
       #   agent=1
       #   chown user:system_user agent.jar
@@ -51,16 +51,16 @@ write_files:
       #   echo "Jenkins not reachable. Skipping Jenkins agent start." >>/home/user/install-log.txt
       # fi
 
-      # if wget -q --method=HEAD http://gitea.tooling.test:3000/infraautomator/ ; then
+      # if wget -q --method=HEAD http://gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:3000/${ORG_NAME}/ ; then
       #   echo "Setting git to Gitea." >>/home/user/install-log.txt
-      #   export GIT_URL=http://gitea.tooling.test:3000/infraautomator/ >> /etc/profile
+      #   export GIT_URL=http://gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:3000/${ORG_NAME}/ >> /etc/profile
       # else
       #   echo "Setting git to Github." >>/home/user/install-log.txt
       #   export GIT_URL=https://github.com/Devoteam/ >> /etc/profile
       # fi
 
       # Setting user repo to internal host to enable curated packages
-      if $(wget https://pulp.tooling.test/content/apt); then
+      if $(wget https://pulp.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}/content/apt); then
         echo "Curated repo reachable. Setting deb repositories to curated repo." >>/home/user/install-log.txt
         echo "To be done"  >>/home/user/install-log.txt
       else
