--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ include:
   - keycloak/compose.yaml
   - lldap/compose.yaml
   - pulp/compose.yaml
+  - portainer/compose.yaml
   - vault/compose.yaml
 
 secrets:
